# jinsudai

./: .env  .env.example  .env.secrets.example  .flake8  .gitignore  .vibe_default_prompt.txt  .vibe_instructions  LICENSE  README.md  SPECIFICATIONS.md  check_files.py  config.yaml  debug_training.py  pyproject.toml  test_imports.py  test_loader.py  test_pipeline.py
.github/: copilot-instructions.md
docs/: API_EXAMPLE.md  ARCHITECTURE_MLOPS.md  DATABASE_SCHEMA.md
infra/: README.md
notebooks/: README.md  actual_values_pipeline.ipynb  consumption_dev.ipynb  consumption_test.ipynb  exploration.ipynb  prediction_pipeline.ipynb  sftp_ingestion.ipynb  sftp_testing.ipynb  training_pipeline.ipynb  training_pipeline_manual.ipynb
pipelines/: monitoring_pipeline.py  preparation_pipeline.py  run_inference.py  run_ingestion.py  run_monitoring.py  run_preparation.py  run_training.py
scripts/: .force_deployment.md  clean_corrupted_data.py  create_test_data.py  deploy_prediction_flows.py  deploy_prediction_schedule.py  deploy_scheduled_flows.py  deploy_weather_schedule.py  download_latest_train_from_s3.py  fetch_consumption_from_db.py  generate_missing_actuals.py  generate_predictions_from_date.py  run_actual_values_pipeline.py  run_data_pipeline.py  run_data_pipeline_simple.py  run_drift_detection_pipeline.py  run_inference_pipeline.py  run_ingestion_pipeline.py  run_monitoring_pipeline.py  run_prediction_pipeline.py  run_prepare_consumption_pipeline.py  run_retraining.py  run_sftp_ingestion_pipeline.py  run_training_pipeline.py  run_training_pipeline_simple.py  send_notification.py
tests/: test_ConsumptionDataPreparer.py  test_complete_pipeline.py  test_consumption_pipeline.py  test_drift_detection.py  test_drift_detection_simple.py  test_imports.py  test_monitoring_pipeline.py  test_pipeline.py  test_retraining_pipeline.py  test_train.py  (+2 more)
(+304 files in other folders)
