[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "scikit-learn",
    "autogluon.tabular",
    "autogluon.common",
    "mlflow",
    "python-dotenv",
    "ipykernel",
    "requests>=2.28.0",
    "pyarrow>=10.0.0",
    "evidently",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "paramiko>=3.0.0",
    "resend>=0.8.0",
    "fastapi[standard]",
    "uvicorn[standard]",
    "python-multipart",
    "streamlit (>=1.58.0,<2.0.0)"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"], include = ["ml*", "utils*", "connectors*"] }

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.7,<5.0.0)",
    "notebook (>=7.5.7,<8.0.0)",
    "pytest",
    "pytest-cov"
]
